html and css editng

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <img src="./images/bottom_img.jpeg" alt="">
       </div>
       <div class="left-text">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate minus fugiat expedita, cum, perferendis facilis architecto ducimus nostrum rem repudiandae officia eaque provident possimus quod.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic eligendi eaque corrupti facilis fugit, rem earum, nemo dolorem at dolor, quis culpa delectus facere. Maxime quod iste, nemo odio aspernatur deleniti ad, soluta amet porro quibusdam, nostrum eligendi delectus ipsam pariatur illum vel reprehenderit inventore. Consequuntur id earum officia quidem?</p>
       </div>
     </div>
-
-    <div class="right-bottom">
+    </div>
+    <div class="newsletter">
       <form action="POST">
         <p>Join our newsletter</p>
         <label for="subscribe">Email:</label>
@@ -52,7 +52,7 @@
       </form>
     </div>
 
-    </div>
+    
     
   </section>
 </body>
